tests/Project1/student_test/test_1_s08.out
Error type B at Line 4: Missing closing parenthesis ')'
Error type B at Line 8: Missing closing parenthesis ')'
