tests/Project1/student_test/test_1_s08.spl
int t02_12012919() 
{
    int a = 0xff;
    while(a < 10{
        a = a * 2;
    }
    
    if (a != 'a'{
        return 3;
    }
    return a;
}
